force-app/main/default/objects/Grupo_de_Prestaciones__c/Grupo_de_Prestaciones__c.object-meta.xml
<CustomObject>
    <label>Grupo de Prestaciones</label>
    <nameField>
        <displayFormat>GP-{0000}</displayFormat>
        <label>Nro. de Grupo de Prestaciones</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Grupos de Prestaciones</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>