force-app/main/default/objects/Grupo_de_Prestaciones__c/fields/Codigo__c.field-meta.xml
<CustomField>
    <fullName>Codigo__c</fullName>
    <externalId>true</externalId>
    <label>Código</label>
    <length>255</length>
    <type>Text</type>
</CustomField>