force-app/main/default/objects/Grupo_de_Prestaciones__c/fields/Descripcion_grupo__c.field-meta.xml
<CustomField>
    <fullName>Descripcion_grupo__c</fullName>
    <label>Descripción Grupo</label>
    <type>TextArea</type>
</CustomField>