force-app/main/default/objects/Grupo_de_Prestaciones__c/fields/Familia__c.field-meta.xml
<CustomField>
    <fullName>Familia__c</fullName>
    <label>Familia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>