force-app/main/default/objects/Grupo_de_Prestaciones__c/fields/Nombre_de_Familia__c.field-meta.xml
<CustomField>
    <fullName>Nombre_de_Familia__c</fullName>
    <label>Nombre de Familia</label>
    <length>255</length>
    <type>Text</type>
</CustomField>