force-app/main/default/objects/Grupo_de_Prestaciones__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Descripcion_grupo__c</columns>
    <columns>Familia__c</columns>
    <columns>Grupo__c</columns>
    <filterScope>Everything</filterScope>
    <label>Todos</label>
</ListView>